# pharynx_redox

./: .coveragerc  .coveralls.yml  .gitattributes  .gitignore  .travis.yml  Dockerfile  LICENSE  MANIFEST.in  Measure_.py  New_.py  README.md  Untitled.ipynb  conda-env.yml  conda-spec-file.txt  environment.yml  path.py  pyproject.toml  pytest.ini  readthedocs.yml  reqs.txt  requirements.txt  setup.cfg  setup.py  test.sh  threshold.ijm  tox.ini
ImageJ Jython/: New_.py  measure.py  measure_.py  measurement_saver.py  test.ijm  testing.py  threshold.py  threshold_.py  utils.py
ImageJ Macros/: Cluster_Image.ijm  Measure_Modes.ijm  Mvmt_Label.ijm  NEW_1208_PA_RatImg_shortcuts_Update.ijm  New_Macros.ijm  New_Macros.ijm copy  New_Pharynx_Macros.ijm  Old_Macros.ijm  Orient_.ijm  Pharynx_Macros_S.ijm  Split_Stack.ijm  Window_Arrange.ijm  align_pa.ijm  clearEnv.ijm  mask_.ijm  max_circle_polylin.ijm  max_circle_polyline.ijm  measure_polyline.ijm  measure_stats.ijm  new_orient.ijm  new_polyline.ijm  part1.ijm  poly_coords.ijm  polyline.ijm  roi_coords.ijm  test.ijm  threshold.ijm
ImageJ Scripts/ImageJ Macros/: polyline_macro.ijm  thresh_new.ijm
ImageJ stuff/ImageJ Macros/: Pharynx_Macros_with_labels.ijm  draw_polylines.ijm  save_polylines.ijm
ImageJ stuff/colormaps/: CET-C1s.lut  CET-C2s.lut  CET-C4s.lut  CET-C5s.lut  CET-CBD1.lut  CET-CBTL1.lut  CET-D11.lut  CET-D12.lut  CET-D13.lut  CET-D1A.lut  CET-D3.lut  CET-D4.lut  CET-D6.lut  CET-D7.lut  CET-D9.lut  CET-L1.lut  CET-L12.lut  CET-L14.lut  CET-L16.lut  CET-L19.lut  CET-L2.lut  CET-L3.lut  CET-L4.lut  CET-R1.lut  CET-R2.lut
classifiers/: adaboost_clf_03_20_18
classifiers/2018-05-02T12_29_15/: 2018-05-02T12_29_15.pkl  notes.txt  report.txt
data/paired_ratios/: all_movement_annotations.csv  annotate_movement.ijm
docs/: Makefile  make.bat  requirements.txt
docs/source/: api_reference.rst  conf.py  developer_documentation.rst  documentation.rst  image_analysis.rst  index.rst  installation.rst  usage.rst
experiments/single_v_dual_poly/: README.md
figures/: Thumbs.db
fiji_plugin/simple-commands/: pom.xml
fiji_plugin/worm-measure/: pom.xml
gui/: main.py  widgets.py
gui/qt_py_files/: gui.py  gui_pyqtgraph.py  load_experiment.py  load_raw_image.py  meta_loader.py
gui/qt_ui_files/: gui_pyqtgraph.ui  load_raw_image.ui  meta_loader.ui
imagej/ImageJ Macros/: annotations.csv  label_macro.txt  threshold.ijm
imagej/colormaps/: CET-C1.lut  CET-C2.lut  CET-C4.lut  CET-C5.lut  CET-CBC1.lut  CET-CBC2.lut  CET-CBL2.lut  CET-CBTC1.lut  CET-CBTC2.lut  CET-CBTL2.lut  CET-D10.lut  CET-D2.lut  CET-I1.lut  CET-I3.lut  CET-L10.lut  CET-L11.lut  CET-L13.lut  CET-L15.lut  CET-L17.lut  CET-L18.lut  CET-L5.lut  CET-L9.lut
matlab/: NEW positiondaf-7(e1372) 25C take 2 v0.11_test.m  SAY52 HD233 20170406&19&20_metadata.mat  SAY52 HD233 20170406&19&20_metadata_del18.mat  fda_smoothing_playground.m  fda_smoothing_playground.m~  findOptimalLambda.m  findOptimalLambda.m~  gcv_prof_data.m  matlab.mat  pharynx_redox_matlab.prj  plotRegionBoundaries.m  polyline_err_0s.m  random.m  random.m~  setup.py  subtractMedians.m  testing.m  untitled.m  untitled7.m
matlab/CATA_Image analysis Matlab_only workling functions/: Cell_Boundaries_plt.m  LinearVectors_plt.m  LinearVectors_plt_v2.m  NEW_2014_Cell_Boundaries_Cohorts_OxD_E_roundingProblem.m  NEW_Cell_Boundaries_2x2_Cohorts_pm4.m  NEW_Cell_Boundaries_plt_pm4_pm3end.m~  NEW_LinearVectors_plt_v3.m  NEW_LinearVectors_plt_v3.m~  NEW_Trying diff_Cell_Boundaries_2x2.m  NEW_sort_R_mean.m  getint.m  matlab.mat  square.m
matlab/GUI/: NewExperimentGUI.mlapp  app1.mlapp
matlab/Javier matlab functions/: boundedline_ja.m  ja_E0.m  ja_E2oxd_gsh.m  ja_E2oxd_gsh_withGSHtotal.m  ja_Egsh.m  ja_adjust_brightness.m  ja_adjust_brightness2.m  ja_import_tiff_stack.m  ja_oxd.m  plot_pca_fd_ja.m  plot_pca_fd_ja2_position.m  plotfd_withbasis_ja.m  (+3 more)
measure-pharynx-redox/: image_processing.py  plots.py
measure-redox-pharynx/: pharynx_io.py
misc python scripts/: classify.py
notebooks/: CNN Movement Detection.ipynb  Err by warp_region.ipynb  Feature Exploration.ipynb  Figures for Paper.ipynb  Full-Pipeline Number Crunchin'.ipynb  HSL ratio correction.ipynb  Labelling.ipynb  Machine Learning.ipynb  Midline Thickness.ipynb  Midline.ipynb  Midline.ipynb copy  Movement Error Analysis.ipynb  Plotting Fun.ipynb  PolyLine Comparison.ipynb  Polyline Analysis.ipynb  Preprocessing.ipynb  Profile Plotting.ipynb  Reg. Experimentation.ipynb  Synthetic Movement Analysis.ipynb  Thresholding Comparisons.ipynb  Thresholding Experiments.ipynb  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  big_regions.csv  helpers.py  skFDA.ipynb  untitled.ipynb
pharedox/: constants.py  data_analysis.py  default-config.ini  default-config.yaml  default-settings.yaml  experiment.py  image_processing.py  io.py  pio.py  plots.py  profile_processing.py  registration_parameter_sweep.py  standardization_template.txt  synthetic_mvmt_testing.py  utils.py
pharynx_redox/: cli.py  cli_interface.py  constants.py  data_analysis.py  example-settings.yaml  experiment.py  gui.py  image_processing.py  io.py  main.py  pharynx_io.py  plots.py  profile_processing.py  registration_parameter_sweep.py  synthetic_mvmt_testing.py  test_gui.py  utils.py
python/: .coveralls.yml  Pipfile  README.md  playground.ipynb  requirements.txt
python_notebooks/: Untitled1.ipynb
requirements/: base.txt  dev.txt  development.txt  docs.txt  test.txt  testing.txt
scripts/: Script.jsl  cluster.py  cluster_columns.py  coalesce.jsl
segmenation_models/: segmentation.py  segmentation_model.ipynb
tests/: __init__.py  conftest.py  data  test_data_analysis.py  test_experiment.py  test_image_processing.py  test_io.py  test_pharynx_io.py  test_profile_processing.py  test_utils.py
unet/: data.py  dataPrepare.ipynb  main.py  trainUnet.ipynb
(+898 files in other folders)
