[tool.poetry]
name = "pharedox"
version = "0.1.0"
description = "Tools for measuring cytosolic redox state in various tissues of the nematode C. elegans"
authors = ["Sean <sean.b.johnsen@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.19.0"
xarray = "^0.15.1"
netCDF4 = "^1.5.3"
scikit-image = "^0.17.2"
tifffile = "^2020.7.4"
scipy = "^1.5.1"
numba = "^0.50.1"
scikit-learn = "^0.23.1"
pandas = "^1.0.5"
statsmodels = "^0.11.1"
SimpleITK = "^1.2.4"
matplotlib = "^3.2.2"
seaborn = "^0.10.1"
PyQt5 = "^5.15.0"
napari = "^0.3.5"
tqdm = "^4.47.0"
click = "^7.1.2"
strictyaml = "^1.0.6"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pylint = "^2.5.3"
isort = "<5"
pytest = "^5.4.3"
pytest-xdist = "^1.32.0"
pytest-cov = "^2.10.0"
pytest-datadir = "^1.3.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
