[tool.poetry]
name = "pharedox"
version = "0.1.0-alpha.0"
description = "An image analysis pipeline to quantify redox state in the pharynx of C. elegans"
authors = ["Sean <sean.b.johnsen@gmail.com>"]
license = "MIT"
include = ["README.md"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.19.1"
xarray = "^0.16.0"
netCDF4 = "^1.5.4"
scikit-image = "^0.17.2"
tifffile = "^2020.7.22"
scipy = "^1.5.2"
pandas = "^1.0.5"
statsmodels = "^0.11.1"
simpleITK = "^1.2.4"
matplotlib = "^3.3.0"
seaborn = "^0.10.1"
PyQt5 = ">=5.12.3,<5.15.0"
napari = "^0.3.6"
tqdm = "^4.48.0"
click = "^7.1.2"
strictyaml = "^1.0.6"
black = {version = "^19.10b0", allow-prereleases = true}
pandera = {version = "^0.4.4", allow-prereleases = true}
jupyterlab = "^2.2.0"

[tool.poetry.dev-dependencies]
sphinx = "^3.1.2"
sphinx_rtd_theme = "^0.5.0"
sphinx-autodoc-typehints = "^1.11.0"
numpydoc = "^1.1.0"

[tool.poetry.scripts]
pharedox = "pharedox.scripts:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
