[metadata]
name = pharedox
url = https://github.com/ApfeldLab/pharynx_redox
download_url = https://github.com/ApfeldLab/pharynx_redox
license = MIT
license_file = LICENSE
description = An image analysis pipeline to quantify redox state in the pharynx of C. elegans
long_description = file: README.md
long_description_content_type = text/markdown
author = Sean Johnsen
author_email = sean.b.johnsen@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Environment :: X11 Applications :: Qt
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT
    Programming Language :: C
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Utilities
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS

[options]
zip_safe = False
packages = find:
python_requires = ~=3.6
install_requires =
    numpy>=1.19.1,<20
    xarray>=0.16.0,<0.17
    netCDF4>=1.5.4,<1.6
    scikit-image>=0.17.2,<0.18
    tifffile>=2020.7.22
    scipy>=^1.5.2,<1.6
    pandas>=1.0.5,<1.1
    statsmodels>=0.11.1,<0.12
    simpleITK>=1.2.4,<1.3
    matplotlib>=3.3.0,<3.4
    seaborn>=0.10.1,<0.11
    PyQt5>=5.12.3,<5.15.0
    napari>=0.3.6,<0.4
    tqdm>=4.48.0,<4.49
    click>=7.1.2,<7.2
    strictyaml>=1.0.6,<1.1
    pandera>=0.4.4,<0.5

# for explanation of %(extra)s syntax see:
# https://github.com/pypa/setuptools/issues/1260#issuecomment-438187625
# this syntax may change in the future

[options.extras_require]
jupyter =
    jupyterlab


[options.entry_points]
console_scripts =
    pharedox = pharedox.scripts:main
