[metadata]
name = pharedox
version = 0.0.3
url = https://github.com/ApfeldLab/pharynx_redox
download_url = https://github.com/ApfeldLab/pharynx_redox
license = MIT
license_file = LICENSE
description = An image analysis pipeline to quantify redox state in the pharynx of C. elegans
long_description = file: README.md
long_description_content_type = text/markdown
author = Sean Johnsen
author_email = sean.b.johnsen@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Environment :: X11 Applications :: Qt
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: C
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Utilities
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS

[options]
zip_safe = False
packages = find:
python_requires = ~=3.6
install_requires =
    numpy==1.20.0
    xarray>=0.16.0
    netCDF4>=1.5.4
    scikit-image>=0.17.2
    tifffile>=2020.7.22
    scipy>=^1.5.2
    pandas>=1.0.5
    statsmodels>=0.11.1
    simpleITK>=1.2.4
    matplotlib>=3.3.0
    seaborn>=0.10.1
    PyQt5>=5.12.3
    napari==0.4
    tqdm==4.48.0
    click>=7.1.2
    strictyaml>=1.0.6
    pandera>=0.4.4

# for explanation of %(extra)s syntax see:
# https://github.com/pypa/setuptools/issues/1260#issuecomment-438187625
# this syntax may change in the future

[options.extras_require]
jupyter =
    jupyterlab


[options.entry_points]
console_scripts =
    pharedox = pharedox.scripts.__main__:cli
